# CameraYoloApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README  README.md  alembic.ini  connect_to_db.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.py
app/: database.py  main.py  security.py  video.py
app/models/: camera.py  user.py
app/static/css/: main.css  style.css
app/templates/: login.html  main.html  register.html
config/: .env.example  alembic.ini
migrations/: env.py
migrations/versions/: 1dde742c5c9c_create_posts_table.py  1dde742c5c9c_create_users_table.py  3a32f171aa6f_create_cameras_table.py  8606452ce3a5_create_camera_settings_table.py
models/: post.py
