[tool.poetry]
name = "fastapi-yolo-app"
version = "0.1.0"
description = ""
authors = ["KabaevNV <nkkab2@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.2,<0.117.0"
uvicorn = { version = ">=0.35.0,<0.36.0", extras = ["standard"] }
psycopg2-binary = ">=2.9.10,<3.0.0"
databases = { version = ">=0.9.0,<0.10.0", extras = ["asyncpg"] }
alembic = ">=1.16.5,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
python-jose = ">=3.5.0,<4.0.0"
bcrypt = "==4.0.1"
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
jinja2 = ">=3.1.6,<4.0.0"
python-multipart = ">=0.0.20,<0.0.21"
ultralytics = ">=8.3.203,<9.0.0"

[[tool.poetry.packages]]
include = "app"

